<resources>
    <string name="app_name">BlindLight</string>
    <string name="Settings">Settings</string>
    <string name="Main">AppMain</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>
    <string name="proxText">proxText</string>
    <string name="seekbarView">seekbarView</string>
    <string name="testSound">Test Sound</string>
    <string name="lightsensText">lightsensText</string>
    <string name="Sensors">Sensors</string>
    <string name="cm">cm</string>
    <string name="Proximity">Proximity Sensor</string>
    <string name="m_s2">m/s^2</string>
    <string name="Accelerometer">Accelerometer</string>
    <string name="the_app_is_ready_to_start">The app is ready to start!</string>
    <string name="start_now">START NOW!</string>
    <string name="settings">Settings</string>
    <string name="light">Light Sensor</string>
    <string name="exit">Exit</string>
    <string name="android_settings">Android Settings</string>
    <string name="menu">Menu</string>
    <string name="y_axis_limit">Y-axis limit</string>
    <string name="z_axis_limit">Z-axis limit</string>
    <string name="save_changes">Save Changes</string>
    <string name="checkbox">CheckBox</string>
    <string name="readyToStart">BlindLight is ready to start!</string>
    <string name="lx">lx</string>
    <string name="minThreshold">Select Min Threshold</string>
    <string name="maxThreshold">Select Max Threshold</string>
    <string name="maxLightThreshold">Select max light threshold :</string>
    <string name="minLightThreshold">Select min light threshold :</string>
    <string name="onoffprox">Press here to enable/disable proximity sensor</string>
    <string name="moreInfo">More Info</string>
    <string name="info">BlindLight is an application that helps you map the space around you and protects you from hitting on obstacles by warning you with a special sound. </string>
    <string name="mainLabel">Beware of your Surroundings</string>
    <string name="homeLabel">Lets Start</string>
    <string name="exitDB">Exit</string>
    <string name="questionDB">Are you sure you want to EXIT this App?</string>
    <string name="yesDB">YES</string>
    <string name="noDB">NO</string>
    <string name="coveredX">Select threshold in X axis :</string>
    <string name="coveredY">Select threshold in Y axis :</string>
    <string name="coveredΖ">Select threshold in Z axis :</string>
    <string name="frequency">Select frequency (accelerometer) :</string>
    <string name="select_mode">Select Mode:</string>
    <string name="mode">Mode</string>
    <string name="Mode">Mode:</string>
    <string name="mqtt_broker_settings">MQTT broker (settings)</string>
    <string name="choose_port">Choose Port:</string>
    <string name="my_ip">My Ip:</string>
    <string name="ip_value">ip_value</string>


    <string name="action_settings">Settings</string>
    <string name="image_details_header">Details:</string>
    <string name="image_preview_header">Preview:</string>
    <string name="loading_message">Uploading image. Please wait.</string>

    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>

    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>


</resources>