<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/main_back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aggel.blindlight.Activities.MainActivity">


    <TextView
        android:text="@string/m_s2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/yText"
        android:layout_alignParentEnd="true"
        android:id="@+id/textView5"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp" />


    <TextView
        android:text="@string/m_s2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/xText"
        android:layout_alignParentEnd="true"
        android:id="@+id/textView6"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp" />

    <TextView
        android:text="@string/m_s2"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/m_sec2"
        tools:ignore="RelativeOverlap"
        android:textSize="15sp"
        android:layout_alignBottom="@+id/zText"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Z"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/zText"
        android:layout_marginTop="33dp"
        android:textSize="14sp"
        android:layout_below="@+id/yText"
        android:layout_alignStart="@+id/yText" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#d93434"
        android:layout_alignTop="@+id/Accelerometer"
        android:layout_alignParentStart="true" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#d93434"
        android:layout_marginTop="16dp"
        android:id="@+id/view3"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/Y"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yText"
        android:layout_marginTop="31dp"
        android:textSize="14sp"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/xText" />

    <TextView
        android:text="@string/lx"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_alignBaseline="@+id/sensText"
        android:layout_alignBottom="@+id/sensText"
        android:layout_alignParentEnd="true" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#d93434"
        android:id="@+id/view2"
        android:layout_alignTop="@+id/LightTextView"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Accelerometer"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Accelerometer"
        android:allowUndo="true"
        android:textSize="20sp"
        tools:ignore="UnusedAttribute"
        android:layout_marginTop="21dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:layout_below="@+id/proxText"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/light"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LightTextView"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/readyApp"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Proximity"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Proximity"
        android:textSize="20sp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/view3"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/X"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/xText"
        android:textSize="14sp"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/Accelerometer"
        android:layout_alignParentStart="true"
        android:layout_marginStart="11dp" />

    <TextView
        android:text="@string/proxText"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/proxText"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/Proximity"
        android:layout_alignStart="@+id/xText" />

    <TextView
        android:text="@string/lightsensText"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sensText"
        android:textSize="18sp"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/LightTextView"
        android:layout_alignStart="@+id/proxText" />

    <TextView
        android:text="@string/Sensors"
        android:textColor="@color/colorBackround"
        android:textSize="34sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/readyApp"
        tools:textAlignment="center"
        android:textCursorDrawable="@color/colorAccent"
        android:textColorHighlight="@color/colorAccent"
        tools:ignore="UnknownIdInLayout"
        android:textAlignment="center"
        android:background="@android:drawable/editbox_dropdown_dark_frame"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:text="Mode: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/connectivity"
        android:layout_above="@+id/view2"
        android:layout_alignParentEnd="true" />

    <Switch
        android:text="Cam: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/camera"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>


</ScrollView>