<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:descendantFocusability="blocksDescendants"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:label="@string/Settings"
    android:fillViewport="true"
    tools:context="com.example.aggel.blindlight.SettingsActivity"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="710dp"
        android:orientation="vertical"
        android:weightSum="1"
        android:id="@+id/NumberPickerLightMax">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LightTextViewMax"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:text="@string/maxLightThreshold"
            android:layout_weight="0.10"
            android:background="@android:drawable/dialog_holo_light_frame" />

        <NumberPicker
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"
            android:id="@+id/LightMaxNumberPicker" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LightTextViewMin"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:text="@string/minLightThreshold"
            android:layout_weight="0.10"
            android:background="@android:drawable/dialog_holo_light_frame" />

        <NumberPicker
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"
            android:id="@+id/LightMinNumberPicker" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#d93434"
            android:layout_weight="0.09" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="15dp"
            android:background="#fafafa"
            android:layout_weight="0.09" />

        <CheckBox
            android:text="@string/onoffprox"
            android:layout_width="match_parent"
            android:button="@drawable/cb_selector"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox1"
            android:layout_weight="0.07" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="15dp"
            android:background="#fafafa"
            android:layout_weight="0.09" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#d93434" />

        <TextView
            android:text="@string/seekbarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seekbarView"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:layout_below="@+id/button"
            android:layout_alignParentStart="true"
            tools:ignore="ObsoleteLayoutParam"
            android:background="@android:drawable/dialog_holo_light_frame" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:max="10"
            android:progress="3"
            android:layout_below="@+id/button"
            android:layout_alignParentStart="true"
            android:layout_marginTop="37dp"
            tools:ignore="ObsoleteLayoutParam" />

        <TextView
            android:text="@string/y_axis_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:layout_below="@+id/seekBar"
            android:layout_alignParentStart="true"
            android:layout_marginTop="51dp"
            android:id="@+id/seekbarView2"
            tools:ignore="ObsoleteLayoutParam"
            android:background="@android:drawable/dialog_holo_light_frame" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekbarView2"
            android:layout_marginTop="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:id="@+id/seekBar2"
            android:max="10"
            android:progress="7"
            tools:ignore="ObsoleteLayoutParam" />

        <TextView
            android:text="@string/z_axis_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:layout_below="@+id/seekBar2"
            android:layout_marginTop="59dp"
            android:id="@+id/seekbarView3"
            tools:ignore="ObsoleteLayoutParam"
            android:background="@android:drawable/dialog_holo_light_frame" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekbarView3"
            android:layout_marginTop="51dp"
            android:id="@+id/seekBar3"
            android:layout_alignParentStart="true"
            android:max="10"
            android:progress="8"
            tools:ignore="ObsoleteLayoutParam" />


        <TextView
            android:text="@string/frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:layout_below="@+id/seekBar2"
            android:layout_marginTop="59dp"
            android:id="@+id/seekbarView4"
            tools:ignore="ObsoleteLayoutParam"
            android:background="@android:drawable/dialog_holo_light_frame" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekbarView3"
            android:layout_marginTop="51dp"
            android:id="@+id/seekBar4"
            android:layout_alignParentStart="true"
            android:max="10"
            android:progress="8"
            tools:ignore="ObsoleteLayoutParam" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:background="#fafafa"
            android:layout_weight="0.09" />


        <Button
            android:text="@string/testSound"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_alignParentTop="true"
            tools:ignore="ObsoleteLayoutParam,RelativeOverlap"
            android:background="@drawable/button_shape"
            android:layout_weight="0.13" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="8dp"
            android:background="#fafafa"
            android:layout_weight="0.09" />


        <Button
            android:text="@string/save_changes"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSave"
            android:background="@drawable/button_shape"
            android:layout_weight="0.13" />


    </LinearLayout>


</ScrollView>
