<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackround"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aggel.blindlight.HomeActivity">


    <TextView
        android:text="@string/info"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startText"
        android:layout_marginBottom="33dp"
        tools:ignore="HardcodedText"
        android:layout_alignBottom="@+id/readyApp"
        android:layout_alignParentStart="true"
        android:visibility="invisible"/>

    <TextView
        android:text="@string/readyToStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/readyApp"
        tools:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textCursorDrawable="@color/colorAccent"
        android:textColorHighlight="@color/colorAccent"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:layout_above="@+id/startBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"/>

    <Button
        android:text="@string/moreInfo"
        android:background="@drawable/button_shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/infoBtn"
        android:layout_marginBottom="42dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="38dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/picturewels"
        android:id="@+id/imageView"
        tools:ignore="ContentDescription"
        android:layout_above="@+id/startText"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="74dp" />

    <Button
        android:text="@string/start_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startBtn"
        android:background="@drawable/button_shape"
        tools:ignore="RelativeOverlap"
        android:layout_alignBaseline="@+id/infoBtn"
        android:layout_alignBottom="@+id/infoBtn"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:elevation="0dp" />


</RelativeLayout>
